--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <button class="button is-rounded is-medium">Search</button>
           </p>
         </div>
-        <ul class="navbar item">
+        <ul class="navbar-item">
             <li>
         <a>
           <i class="fa-solid fa-house"></i>
